amélioration des vues et création de composant réutilisable

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,7 +4,8 @@
 
 
 :root {
-    --main-color: #071218;
+    /* --main-color: #071218; */
+    --main-color : #124158;
     --second-color : #947653;
     --third-color : #619A3D;
 }
