--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -61,14 +61,19 @@ table{
     min-width: 100%;
     border-collapse : separate;
     border-spacing :0px 10px;
-    /* border : 1px solid red; */
 }
 .mdTableListe{
-    background-color: #F9F9FF;
     overflow: scroll;
     min-width: 100%;
 }
-table td {
+.ligneTableau{
+    /* background-color: #F9F9FF; */
+    background-color: #fff;
+}
+.mdTableListe tr th{
+    padding: 10px;
+}
+.mdTableListe td, .mdTableListe th {
     border-left : 1px solid #94765335;
     padding-left : 5px;
 }
